# blockx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
committee/: charter.md  principles.md
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/observability/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: currency.rs  ids.rs  lib.rs  money.rs  pagination.rs  response.rs
docs/: ADR-0001.md
scripts/: update_readme.sh
services/auth/: Cargo.toml
services/auth/src/: main.rs  state.rs
services/auth/src/api/: mod.rs  responses.rs
services/auth/src/application/: auth_error.rs  create_user.rs  jwt_claims.rs  jwt_service.rs  login_user.rs  login_user.rsxo  mod.rs  password_service.rs  refresh_flow.rs  refresh_token_model.rs  refresh_token_service.rs
services/auth/src/application/authorization/: create_permission.rs  create_role.rs  grant_permission.rs  mod.rs
services/auth/src/bootstrap/: mod.rs
services/auth/src/domain/: user.rs
services/auth/src/domain/authorization/: mod.rs  permission.rs  role.rs  role_permission.rs  user_role.rs
services/auth/src/infrastructure/: in_memory_user_repository.rs  mod.rs  postgres_user_repository.rs  refresh_token_store.rs  user_repository.rs
services/auth/src/infrastructure/authorization/: mod.rs  permission_repository.rs  role_repository.rs
services/ledger/: Cargo.toml
services/ledger/src/: main.rs
services/ledger/src/application/: chart_of_accounts_service.rs  default_chart.rs  journal_service.rs  journal_validator.rs  ledger_service.rs  mod.rs  posting_engine.rs
services/ledger/src/application/errors/: ledger_error.rs  mod.rs
services/ledger/src/domain/: account.rs  account_type.rs  chart_of_accounts.rs  journal.rs  ledger_entry.rs  mod.rs
services/ledger/src/infrastructure/: in_memory_journal_repository.rs  in_memory_ledger_repository.rs  journal_repository.rs  ledger_repository.rs  mod.rs
services/ledger/tests/: journal_tests.rs  ledger_entry_tests.rs  validator_tests.rs
services/wallet/: Cargo.toml
services/wallet/src/: main.rs
services/wallet/src/application/: wallet_service.rs
services/wallet/src/domain/: wallet.rs
services/wallet/src/infrastructure/: wallet_repository.rs
