[workspace]
resolver = "2"

members = [
    "crates/config",
    "crates/errors",
    "crates/observability",
    "crates/shared",
    "services/auth",
    "services/wallet",
    "services/ledger"
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Marco Antonio Conceicao"]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
