[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../../crates/config" }
errors = { path = "../../crates/errors" }
observability = { path = "../../crates/observability" }
shared = { path = "../../crates/shared" }

argon2 = "0.5"
rand = "0.8"

jsonwebtoken = "9"

serde = { version = "1", features = ["derive"] }

uuid = { version = "1", features = ["v4"] }

chrono = { version = "0.4", features = ["serde"] }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
