[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../crates/shared" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Precisão decimal para operações financeiras
rust_decimal = { version = "1", features = ["serde"] }
